#  @file:  Makefile.am
# @author: Steven R. Emmerson
#
#    Copyright 2021 University Corporation for Atmospheric Research
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	badDef.xml \
	baseAndDimensionless.xml \
	dupBaseAlias.xml \
	dupBaseName.xml \
	dupBaseSymbol.xml \
	inconsistentPrefixEncoding.xml \
	misplacedBase.xml \
	missingBase.xml \
	prefixEncoding.xml \
	prefixName.xml \
	prefixSymbol.xml \
	prefixValue.xml

## The following entries are necessary to stop make(1)s that don't
## understand the .PHONY target from trying to create the given files.
install-info-am:
install-html-am:
install-pdf-am:
