## Process this file with automake to produce Makefile.in
EXTRA_DIST = \
        prefixes.xml \
        include.xml

## The following entries are necessary to stop make(1)s that don't
## understand the .PHONY target from trying to create the given files.
install-info-am:
install-html-am:
install-pdf-am:
